Manifest/luxury.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxury-deployment
  namespace: luxury-namespace
spec:
  selector:
    matchLabels:
      app: luxury
  replicas: 2
  template:
    metadata:
      name: luxury-pod
      labels:
        app: luxury
    spec:
    containers:
    - name: luxury-con
      image: nsku537/luxury:46
      ports:
      - containerPort: 8000
