Manifest/luxury-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: luxury-service
  namespace: luxury-namespace
spec:
  selector:
    app: luxury
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30000  
  type: LoadBalancer
